--- a/spring.io.guides/gs-rest-service/build.gradle
+++ b/spring.io.guides/gs-rest-service/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.projectlombok:lombok:1.16.4")
-    testCompile("junit:junit")
+    testCompile("junit:junit:4.12")
 }
 
 task wrapper(type: Wrapper) {
