Consuming a RESTful Web Service

--- a/spring.io.guides/gs-consuming-rest/build.gradle
+++ b/spring.io.guides/gs-consuming-rest/build.gradle
@@ -24,7 +24,9 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter")
+    compile("org.springframework:spring-web")
+    compile("com.fasterxml.jackson.core:jackson-databind")
     compile("org.projectlombok:lombok:1.16.4")
     testCompile("junit:junit:4.12")
 }
