--- a/spring-boot-jee/ch12/cloud_app/pom.xml
+++ b/spring-boot-jee/ch12/cloud_app/pom.xml
@@ -15,6 +15,7 @@
         <module>discovery</module>
         <module>config</module>
         <module>person</module>
+        <module>msg</module>
     </modules>
 
     <parent>
