ui module + 断路器服务

--- a/spring-boot-jee/ch12/cloud_app/pom.xml
+++ b/spring-boot-jee/ch12/cloud_app/pom.xml
@@ -16,6 +16,7 @@
         <module>config</module>
         <module>person</module>
         <module>msg</module>
+        <module>ui</module>
     </modules>
 
     <parent>
