--- a/spring-boot-jee/ch12/ch12_demo_src/pom.xml
+++ b/spring-boot-jee/ch12/ch12_demo_src/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>ch12</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Cloud Native App</name>
+    <name>sprin_cloud_demo</name>
 
     <modules>
         <module>config</module>
